# strands-agents-examples

./: README.md
capital_markets/: README.md  pyproject.toml
capital_markets/market_data/: README.md  agent_bedrock.py  agent_bedrock_api.py  agent_ollama.py
capital_markets/market_data/tests/: README.md  financialdataset_ai.http
capital_markets/trading_analysis/: README.md  agent.py
capital_markets/trading_analysis/tools/: __init__.py  data_generators.py  fundamental.py  risk.py  sentiment.py  technical.py
